<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="311dp"

        android:layout_height="49dp"
        android:fontFamily="@font/bold"
        android:text="@string/welcome"
        android:textAlignment="textStart"
        android:textColor="#FFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="272dp"

        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.35"
        android:fontFamily="@font/thin"
        android:text="@string/subWelcome"
        android:textAlignment="textStart"
        android:textColor="#FFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/button"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/button"
        android:fontFamily="@font/light"
        android:onClick="log"
        android:text="@string/log"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="91dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/thin"
        android:text="@string/sigin"
        android:textColor="@color/pinkk"
        android:textSize="18sp"
        android:onClick="register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>